--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -7,6 +7,14 @@
   "plugins": {
     "SplashScreen": {
       "launchShowDuration": 0
+    },
+    "CapacitorFirebaseAuth": {
+      "providers": ["google.com"],
+      "languageCode": "en",
+      "nativeAuth": false,
+      "permissions": {
+           "google": ["https://www.googleapis.com/auth/gmail.readonly"]
+       }
     }
   },
   "cordova": {}
