--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,9 @@
               },
               {
                 "input": "src/global.scss"
+              },
+              {
+                "input": "node_modules/chartist/dist/chartist.css"
               }
             ],
             "scripts": []
