--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@ionic/angular": "^5.0.0",
     "@types/gapi": "0.0.39",
     "capacitor-firebase-auth": "^2.3.2",
+    "chartist": "^0.11.4",
     "firebase": "^7.13.2",
-    "rxjs": "~6.5.1",
+    "ng-chartist": "^4.1.0",
+    "rxjs": "~6.6.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
@@ -40,6 +42,7 @@
     "@angular/language-service": "~9.1.6",
     "@capacitor/cli": "2.4.0",
     "@ionic/angular-toolkit": "^2.1.1",
+    "@types/chartist": "^0.11.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
